# atomistic_spin_model_GdFe

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt  fields.cpp  fields.h  init.h  integrator.cpp  integrator.h  io.cpp  io.h  io_csv_utils.h  io_temperature_csv.cpp  io_temperature_csv.h  lattice.cpp  lattice.h  main.cpp  make_input.py  math_utils.h  params.h  reductions.cpp  reductions.h  rng.h  run_stage_1.sh  run_stage_2.sh  temperature_series.h  test.cpp  test.h
